--- a/digian.html
+++ b/digian.html
@@ -8,23 +8,58 @@
 </head>
 <body>
     <div class="inicio">
-        <div class="titulo">gigian</div>
-         <div class="nav"></div>
-        <button>INICIO</button>
-        <button>SOBRE NÓS</button>
-        <button>SERVIÇOS</button>
-        <button>CONTATO</button>
+        <div class="titulo">Digian</div>
+        <div class="nav">
+            <button>Inicio</button>
+            <button>Sobre nós</button>
+            <button>Serviços</button>
+            <button>Contato</button>
+        </div>
         <div class="faq">
-            <a href="FAQ"></a>
-        <a href="#">FAQ</a></div>
+            <a href="#">FAQ</a>
+        </div>
+        <div class="imginicio">
+            <img src="imagens/slider-img.png" width="550" height="600">
+        </div>
+        <div class="texinicio">
+            <h2>Conheça o Digian</h2>
+            <p>Nossa especialidade é o Marketing Digital, melhore seus números na internet com nossos serviços digitais e aumente seu faturamento no mercado que está sempre em alta.<br>Seja bem-vindo(a) a Digian</p>
+        </div>
     </div>
-    <div class="imginicio">
-   <img src="imagens/slider-img.png" width="550" height="600">
+    <div class="serv" id="serv">
+        <h2>Nossos Serviços</h2>
+        <p>Com soluções diferentes o Digian possui monitoramentos de<br>
+           trafego de dados até a gestão de Redes Sociais<br>
+           Conheça nossos serviços abaixo
+        </p>
     </div>
-    <div class="texinicio"> <h2>Conheça a digian</h2>
-        <p>nossa especialidade é o marketing digital, melhore seus números na internet com nossos serviços digitais e almente seu faturamento no mercado que está sempre em alta.<br>Seja bem-vindo(a) a digian </p>
+    <br>
+    <div class="svquadros">
+        <div class="svquadro1">
+            <img src="imagens/s1.png" width="100" height="100"><br>
+            <h3>Links Patrocinados</h3>
+            <p>Aumente o Alcance de suas publicações com os <b>Links Patrocinados</b></p>
+        </div>
+        <div class="svquadro2">
+            <img src="imagens/s2.png" width="100" height="100"><br>
+            <h3>SEO</h3>
+            <p>Tenha o controle das métricas e melhore os números de seu negócio digital com nossa gestão de <b>SEO</b></p>
+        </div>
+        <div class="svquadro3">
+            <img src="imagens/s3.png" width="100" height="100"><br>
+            <h3>Marketing Online</h3>
+            <p>Com o sucesso de <b>Marketing Digital</b> seu negócio vai aumentar de forma substâncial os números de engajamento e divulgação de seu perfil ou serviço</p>
+        </div>
+        <div class="svquadro4">
+            <img src="imagens/s4.png" width="100" height="100"><br>
+            <h3>E-mail Marketing</h3>
+            <p>O <b>E-mail Marketing</b> é um dos serviços web com a eficácia mais comprovada no mercado dos negócios digitais</p>
+        </div>
+        <div class="botaosv">
+            <button id="contatosv">Contato</button>
+        </div>
     </div>
-     
-
+    <br>
+    \\versão 0.1.0 - 16/05/24
 </body>
 </html>
